<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReachingPatient">

    <Button
        android:id="@+id/prov_choose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/teal_button"
        android:drawableBottom="@drawable/location"
        android:text="@string/choose_location"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/call_patient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/teal_button"
        android:drawableBottom="@drawable/phone"
        android:drawableTint="@color/white"
        android:text="@string/call_patient"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/prov_arrived"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/teal_button"
        android:drawableBottom="@drawable/car"
        android:text="@string/arrived"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/prov_end"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/orange_button"
        android:drawableBottom="@drawable/end"
        android:text="@string/end_visit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />


</LinearLayout>
