<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ConformationActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/car"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/providerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/darkgrey" />

        <TextView
            android:id="@+id/PN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/providerSpec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speciality"
            android:textStyle="bold"
            android:textColor="@color/darkgrey" />

        <TextView
            android:id="@+id/PS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/providerLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/providerlocation"
            android:textColor="@color/darkgrey"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/PL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone" />

        <TextView
            android:id="@+id/PP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            android:textColor="@color/darkgrey" />

        <TextView
            android:id="@+id/CT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patientlocation"
            android:textStyle="bold"
            android:textColor="@color/darkgrey"/>

        <Button
            android:id="@+id/CL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"

            android:text="@string/choose_location"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_button"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>