<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/AproviderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/darkgrey" />

    <TextView
        android:id="@+id/AproviderNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkOrange" />

</LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/AproviderSpec"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/speciality"
           android:textStyle="bold"
           android:textColor="@color/darkgrey" />

       <TextView
           android:id="@+id/AproviderSpecView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/darkOrange" />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/AproviderLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/providerlocation"
            android:textStyle="bold"
            android:textColor="@color/darkgrey" />

        <TextView
            android:id="@+id/AProviderLocationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/patientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_name"
            android:textStyle="bold"
            android:textColor="@color/darkgrey" />


        <TextView
            android:id="@+id/APatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange" />
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/ApateLoc"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/patientlocation"
           android:textStyle="bold"
           android:textColor="@color/darkgrey" />


       <TextView
           android:id="@+id/APatientLocationView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/darkOrange" />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">
       <ImageButton
           android:id="@+id/phone"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/phone" />

       <TextView
           android:id="@+id/APhoneNumberView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/darkOrange" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            android:textColor="@color/darkgrey" />

        <TextView
            android:id="@+id/ACDView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange" />
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/time"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/time"
           android:textStyle="bold"
           android:textColor="@color/darkgrey" />

       <TextView
           android:id="@+id/ACTView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/darkOrange" />
   </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
       >



        <Button
            android:id="@+id/ACBtn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/darkgrey"
            android:text="@string/cancel"
            android:visibility="gone"
            android:textColor="@color/white"
            android:focusable="false"/>
    </LinearLayout>
</LinearLayout>